tenzir/tests/exec/expr/escape/basic/incomplete_sequence.txt
error: incomplete unicode escape sequence
 --> exec/expr/escape/incomplete_sequence.tql:4:7
  |
4 |   x: "\u11",
  |       ^^^^ 
  |
